[package]
name = "turbine"
version = "0.1.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
async-std = { version = "1.8.0", features = ["attributes"] }

raft = { path = "../raft" }